fix menu logo misalign vertically issue, rename classes so that all non-bootstrap classes use underscore instead of hyphen

--- a/gnosis/catalog/static/css/flagging.css
+++ b/gnosis/catalog/static/css/flagging.css
@@ -72,19 +72,19 @@
     padding: 0;
 }
 
-.ok-container {
+.ok_container {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     user-select: none;
 }
 
-.response-ok {
+.response_ok {
     color: darkseagreen;
     cursor: pointer;
 }
 
-.response-ok:hover {
+.response_ok:hover {
     color: olivedrab;
 }
 
